--- a/style.css
+++ b/style.css
@@ -1,1 +1,62 @@
+body {
+	padding: 0;
+	margin: 0;
 
+}
+.site_container {
+	display: flex;
+	flex-direction: column;
+}
+
+nav {
+	background-color: transparent;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	padding-left: 100px;
+	border-bottom: 1px solid #f1f1f1;
+	position: fixed;
+}
+nav #logo {
+	padding-top: 15px;
+}
+nav ul {
+	list-style: none;
+}
+nav li {
+	display: inline;
+	padding-right: 20px;
+}
+
+#title {
+	background-image: url("http://pavbca.com/walldb/original/e/5/5/367025.jpg");
+	background-position: center center;
+	color: #fff;
+	text-align: center;
+	padding-bottom: 200px;
+}
+#title h1 {
+	margin-top: 120px;
+	font-size: 6em;
+	margin-bottom: 10px;
+}
+#title p {
+	font-size: 1.2em;
+	margin-bottom: 50px;
+	color: rgba(255,255,255,.7);
+}
+.default_btn {
+	color: #fff;
+	background-color: yellowgreen;
+	padding: 20px;
+	text-align: center;
+	border: none;
+	border-radius: 30px;
+	text-transform: uppercase;
+	font-size: 1.2em;
+}
+
+.scroll {
+	background-color: white;
+	color: black;
+}
